<resources>
    <string name="app_name" translatable="false">Japanese Toolbox</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="EmptyResult" translatable="false"> </string>
    <string name="NoText" translatable="false"></string>
    <string name="splashscreen_intro_sentence">PLEASE NOTE! Japanese Toolbox is being discontinued and won\'t be available anymore in Google Play.
        \nPlease download the Japagram Android app - it\'s the same free app, which will continue to be updated and improved.</string>
    <string name="splashscreen_loading_database">Loading Local Database…</string>
    <string name="splashscreen_should_take_only_a_few_seconds">This should only take a few seconds.</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="hidden_online_search">Don\'t get words and meaningsEN online</string>
    <string name="shown_online_search">Merge online search results with local results</string>
    <string name="use_japanese_font_for_asian_characters">Use Japanese font for Asian characters (Chinese characters used in Japanese will be displayed in Japanese font)</string>
    <string name="wait_for_online_results_off">Display the list immediately when finding results, and refresh it when getting online results.</string>
    <string name="pref_OCR_image_contrast_default_value" translatable="false">3</string>
    <string name="pref_OCR_image_contrast_range" translatable="false">100</string>
    <string name="pref_OCR_image_saturation_default_value" translatable="false">0</string>
    <string name="pref_OCR_image_saturation_range" translatable="false">512</string>
    <string name="pref_OCR_image_brightness_default_value" translatable="false">0</string>
    <string name="pref_OCR_image_brightness_range" translatable="false">512</string>
    <string name="Conversion">Transliteration: </string>
    <string name="ConversionLatin">Romaji:</string>
    <string name="ConversionHiragana">Hiragana: </string>
    <string name="ConversionKatakana">Katakana: </string>
    <string name="TransliteratorHint">
        \n<b>Hint</b>
        \nUse an apostrophe (\') after \"n\" to ensure its transliteration to \"ん\".
        \n\nAlso note that this app uses a variation of Kunrei-Shiki romanization where all kana homophones are transliterated to unique Romaji forms, thereby allowing for unambiguous transliterations.</string>
    <string name="AboutTextIntro1">
        Japanese Toolbox is an app created by a Japanese learner for Japanese learners.
    </string>
    <string name="AboutTextIntro2">
        The app is designed to help you manually decipher texts in intermediate to advanced Japanese,
        allowing you to understand the meaningsEN and components of every word or phrase you read at a faster pace than what other translation tools can offer.
    </string>
    <string name="AboutTextIntro3">
        The app does not depend on an Internet connection, so you can use it whenever and wherever you want.
    </string>
    <string name="AboutTextButtonsTitle">
        Explanations on the tools:
    </string>
    <string name="AboutTextButtonsDictTitle">DICT</string>
    <string name="AboutTextButtonsDictParagraph1">
        A local dictionary of Japanese words, expressions and grammar rules.
    </string>
    <string name="AboutTextButtonsDictParagraph2">
        Better than most online reference tools, you can find explanations on any grammar rule just by entering a relevant keyword, even partially.
    </string>
    <string name="AboutTextButtonsDictParagraph3">
        I manually expanded the dictionary over the years with extra meaningsEN and alternate word forms, so you will find words that many online dictionaries fail to find.
    </string>
    <string name="AboutTextButtonsDictParagraph4">
        If there is Internet access then online results are added (you can change this in the Settings menu).
    </string>
    <string name="AboutTextButtonsConjTitle">CONJ</string>
    <string name="AboutTextButtonsConjParagraph1">
        A verb conjugator with more than 140 conjugations for more than 2000 regular verbs and more than 3400 suru verbs.
    </string>
    <string name="AboutTextButtonsConjParagraph2">
        If you search for a conjugated verb (in Romaji, Kana or Kanji form) with this function, a unique reverse-search engine
        will find all possible matching verbs and give the relevant conjugation\'s meaning.
    </string>
    <string name="AboutTextButtonsConvertTitle">あ⇔A</string>
    <string name="AboutTextButtonsConvertParagraph1">
        A Romaji-Hiragana-Katakana text converter.
    </string>
    <string name="AboutTextButtonsConvertParagraph2">
        Though there are various ways of transliterating Kana syllables to Romaji and back,
        I chose the way that will feel most intuitive to Western learners and is compatible with most modern conventions.
    </string>
    <string name="AboutTextButtonsSearchByRadicalTitle">女+子 ⇒ 好</string>
    <string name="AboutTextButtonsSearchByRadicalParagraph1">
        Find any Kanji based on up to 4 radicals/components or by identifying its general structure. You can find components by selecting one of the 214 radicals
        or their common variants, or by searching a list of common Kanji components (ordered by popularity). You can also filter the results by entering the wanted
        reading, meaning or radical number.
    </string>
    <string name="AboutTextButtonsSearchByRadicalParagraph2">
        The search engine is way better than what you\'ll find online, since I manually inspected and corrected the original components database that online sites rely on.
    </string>
    <string name="AboutTextButtonsSearchByRadicalParagraph3">
        Note that users of older Android versions may experience extra \"blank symbols\" instead of Japanese characters, that can\'t be filtered out.
    </string>
    <string name="AboutTextButtonsDecomposeTitle">好 ⇒ 女+子</string>
    <string name="AboutTextButtonsDecomposeParagraph1">
        Get the meaningsEN and readings of all of the components in a given Kanji, recursively.
    </string>
    <string name="AboutTextButtonsDecomposeParagraph2">
        Very useful if you want ot understand Kanjis through their radicals.
    </string>
    <string name="AboutTextButtonsSpeakerTitle">Speaker</string>
    <string name="AboutTextButtonsSpeakerParagraph1">
        A Text-To-Speech function so that you may listen to your query in English or in Japanese.
    </string>
    <string name="AboutTextButtonsSpeakerParagraph2">
        You can choose the speech language in the Settings menu.
    </string>
    <string name="AboutTextButtonsCameraTitle">Camera</string>
    <string name="AboutTextButtonsCameraParagraph1">
        Convert Japanese or English words to searchable text by taking a picture or using an image in your device. This function works offline.
    </string>
    <string name="AboutTextButtonsCameraParagraph2">
        You can choose the text recognition language and initial image saturation/contrast/brightness in the Settings menu.
    </string>
    <string name="AboutTextButtonsMicrophoneTitle">Microphone</string>
    <string name="AboutTextButtonsMicrophoneParagraph1">
        A Speech-To-Text function for Japanese or English speech.
    </string>
    <string name="AboutTextButtonsMicrophoneParagraph2">
        You can choose the speech recognition language in the Settings menu.
    </string>
    <string name="AboutTextPersonalTitle">Personal Note</string>
    <string name="AboutTextPersonalParagraph1">
        If you have any comments or encountered a bug, you\'re welcome to post them at japanesetoolboxapp@gmail.com.
    </string>
    <string name="AboutTextPersonalParagraph2">
        I built JapaneseToolbox on my spare time out of love for the Japanese language and to help people learn Japanese faster. The app will always remain
        FREE and ad-less, and no information you entered in the app is in any way used for purposes other than the services provided in the app.
    </string>
    <string name="AboutTextPersonalParagraph3">
        The source code for the project is freely available at https://github.com/blarom/JapaneseToolbox. You
        can copy the code to your heart\'s content! I encourage the free sharing of knowledge, and if you want to build an app with similar functions,
        you\'re more than welcome to do so. Just don\'t forget to credit me, I spent a lot of time developing these tools :)
    </string>
    <string name="AboutTextCreditsTitle">
        Credits - Part of the app\'s tools are based on following:
    </string>
    <string name="AboutTextCreditsCodeTitle">Code Sources</string>
    <string name="AboutTextCreditsCodeParagraph1">
        The OCR engine is provided by the Tesseract open-source project (supported by Google).
    </string>
    <string name="AboutTextCreditsCodeParagraph2">
        The Text-To-Speech and Speech-To-Text functions are based on Google APIs.
    </string>
    <string name="AboutTextCreditsCodeParagraph3">
        Picture manipulation is provided by the ArthurHub library (https://github.com/ArthurHub/Android-Image-Cropper).
    </string>
    <string name="AboutTextCreditsCodeParagraph4">
        Image sharpening is provided by Pete Houston\'s algorithm (https://xjaphx.wordpress.com/2011/06/22/image-processing-sharpening-image/).
    </string>
    <string name="AboutTextCreditsDatabasesTitle">Database Sources</string>
    <string name="AboutTextCreditsDatabasesParagraph1">
        The CJK character decompositions database is originally based on the cjkdecomp database by Gavin Grover (https://github.com/amake/cjk-decomp - see disclaimer*),
        which I heavily modified and corrected.
    </string>
    <string name="AboutTextCreditsDatabasesParagraph2">
        The local dictionary is a reduced form of the open-source EDICT dictionary, which I modified and manually upgraded to suit the app\'s needs.
        Some other sources were used, including wiktionary.org for updating the suru verb meaningsEN.
    </string>
    <string name="AboutTextDisclaimer1">
        *disclaimer for cjkdecomp:\nCopyright 2017 Gavin Grover\nLicensed under the Apache License,
        Version 2.0 (the \"License\"); you may not use this database except in compliance with the License.\nYou may
        obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable
        law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\nSee the License for the specific language governing permissions and limitations under the License.
    </string>
    <string name="AboutTextDisclaimer2">
        *disclaimer for EDICT Japanese dictionary:\nThis package uses a modified subset of the EDICT, JMDICT and KANJIDIC dictionary files. These files are the property of
        the Electronic Dictionary Research and Development Group, and are used in conformance with the Group\'s licence;
        See http://www.csse.monash.edu.au/~jwb/edict.html and http://www.edrdg.org/.
    </string>
    <string name="loading_central_database">Installing the central words database.\n~ May take up to one minute ~</string>
    <string name="image_adjustment_hint">The original image has saturation 1.0 (normal colors), contrast 1.0 and brightness 0.
        \nOptimal values for character recognition are around saturation 0 (grayscale), contrast 3.0 and brightness -0.5.
        These are the default settings, but feel free to change them to make the image as clear as possible.
        You can adjust these defaults in the Settings menu.</string>
</resources>