<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context="com.japanesetoolboxapp.ui.AboutActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/AboutTextViewItem"
            android:text="@string/AboutTextIntro1"/>
        <TextView
            style="@style/AboutTextViewItem"
            android:text="@string/AboutTextIntro2"/>
        <TextView
            style="@style/AboutTextViewItem"
            android:text="@string/AboutTextIntro3"/>


        <TextView
            style="@style/AboutTextViewItem"
            android:text="@string/AboutTextButtonsTitle"/>
        <TextView
            style="@style/AboutTextViewItemTitle"
            android:text="@string/AboutTextButtonsDictTitle"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsDictParagraph1"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsDictParagraph2"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsDictParagraph3"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsDictParagraph4"/>
        <TextView
            style="@style/AboutTextViewItemTitle"
            android:text="@string/AboutTextButtonsConjTitle"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsConjParagraph1"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsConjParagraph2"/>
        <TextView
            style="@style/AboutTextViewItemTitle"
            android:text="@string/AboutTextButtonsConvertTitle"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsConvertParagraph1"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsConvertParagraph2"/>
        <TextView
            style="@style/AboutTextViewItemTitle"
            android:text="@string/AboutTextButtonsSearchByRadicalTitle"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsSearchByRadicalParagraph1"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsSearchByRadicalParagraph2"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsSearchByRadicalParagraph3"/>
        <TextView
            style="@style/AboutTextViewItemTitle"
            android:text="@string/AboutTextButtonsDecomposeTitle"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsDecomposeParagraph1"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsDecomposeParagraph2"/>
        <TextView
            style="@style/AboutTextViewItemTitle"
            android:text="@string/AboutTextButtonsSpeakerTitle"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsSpeakerParagraph1"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsSpeakerParagraph2"/>
        <TextView
            style="@style/AboutTextViewItemTitle"
            android:text="@string/AboutTextButtonsCameraTitle"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsCameraParagraph1"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsCameraParagraph2"/>
        <TextView
            style="@style/AboutTextViewItemTitle"
            android:text="@string/AboutTextButtonsMicrophoneTitle"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsMicrophoneParagraph1"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextButtonsMicrophoneParagraph2"/>



        <TextView
            style="@style/AboutTextViewItem"
            android:text="@string/AboutTextPersonalTitle"/>
        <TextView
            style="@style/AboutTextViewItemTitle"
            android:text="@string/AboutTextPersonalParagraph1"/>
        <TextView
            style="@style/AboutTextViewItemTitle"
            android:text="@string/AboutTextPersonalParagraph2"/>
        <TextView
            style="@style/AboutTextViewItemTitle"
            android:text="@string/AboutTextPersonalParagraph3"/>


        <TextView
            style="@style/AboutTextViewItem"
            android:text="@string/AboutTextCreditsTitle"/>
        <TextView
            style="@style/AboutTextViewItemTitle"
            android:text="@string/AboutTextCreditsCodeTitle"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextCreditsCodeParagraph1"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextCreditsCodeParagraph2"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextCreditsCodeParagraph3"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextCreditsCodeParagraph4"/>
        <TextView
            style="@style/AboutTextViewItemTitle"
            android:text="@string/AboutTextCreditsDatabasesTitle"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextCreditsDatabasesParagraph1"/>
        <TextView
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextCreditsDatabasesParagraph2"/>

        <TextView
            android:layout_marginTop="10dp"
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextDisclaimer1"/>

        <TextView
            android:layout_marginTop="10dp"
            style="@style/AboutTextViewItemParagraph"
            android:text="@string/AboutTextDisclaimer2"/>
    </LinearLayout>
</ScrollView>
