<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.japanesetoolboxapp.ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="26sp"/>

        <TextView
            android:id="@+id/splashscreen_intro_sentence_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/splashscreen_intro_sentence"
            android:layout_marginBottom="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/splashscreen_loading_database_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/splashscreen_loading_database"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/splashscreen_time_to_load_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/splashscreen_should_take_only_a_few_seconds"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16sp"/>

        <ProgressBar
            android:id="@+id/splashscreen_loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/splashscreen_current_loading_database"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="96dp"
            android:text="@string/loading_central_database"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

